--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -5,12 +5,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="conversal.ui.DialogBox" spacing="8">
+<fx:root type="HBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" spacing="8">
     <children>
-        <ImageView fx:id="displayPicture" fitWidth="40" fitHeight="40"
-                   pickOnBounds="true" preserveRatio="true"/>
+        <ImageView fx:id="displayPicture" fitWidth="40" fitHeight="40" pickOnBounds="true" preserveRatio="true"/>
         <Label fx:id="dialog" wrapText="true" maxWidth="420"/>
     </children>
     <padding><Insets top="6" right="6" bottom="6" left="6"/></padding>
-</HBox>
+</fx:root>
