--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -5,10 +5,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<fx:root type="HBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" spacing="8">
+<fx:root type="HBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" spacing="8.0">
     <children>
-        <ImageView fx:id="displayPicture" fitWidth="40" fitHeight="40" pickOnBounds="true" preserveRatio="true"/>
-        <Label fx:id="dialog" wrapText="true" maxWidth="420"/>
+        <ImageView fx:id="displayPicture" fitWidth="40.0" fitHeight="40.0"
+                   pickOnBounds="true" preserveRatio="true"/>
+        <Label fx:id="dialog" wrapText="true" maxWidth="420.0"/>
     </children>
-    <padding><Insets top="6" right="6" bottom="6" left="6"/></padding>
+    <padding>
+        <Insets top="6.0" right="6.0" bottom="6.0" left="6.0"/>
+    </padding>
 </fx:root>
